# AuthDRF

./: .env  .env.local  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: asgi.py
config/settings/: base.py  dev.py
src/authdrf/: apps.py  exc.py  models.py
src/authdrf/data/fixtures/: permissions.json  roles.json  users.json
src/authdrf/data/migrations/: 0001_initial.py  0002_rename_is_staff_user_is_admin_remove_user_groups_and_more.py  0003_permission_remove_user_is_admin_role_user_role.py  0004_alter_user_password.py  0005_alter_user_role.py
src/authdrf/data/models/: base_models.py  permission_models.py  user_models.py
src/authdrf/management/commands/: create_admin.py
src/authdrf/service/: admin_services.py  auth_services.py  base_services.py  jwt_services.py  password_services.py  user_services.py
src/authdrf/templates/: admin.xhtml  admin_permissions.xhtml  admin_roles.xhtml  admin_users.xhtml  base.xhtml  change_password.xhtml  form.xhtml  index.xhtml  my.xhtml  premium_post.xhtml  public_post.xhtml  response_401.xhtml  response_403.xhtml  sign_in.xhtml  sign_up.xhtml  subscriber_post.xhtml
src/authdrf/web/: urls.py
src/config/: urls.py  wsgi.py
src/config/settings/: base.py  dev.py
src/logger/: config.json  setup.py
tests/: base_tests.py
tests/test_integration/: test_interaction.py  test_setup.py
tests/test_unit/test_data/: test_user_data.py  test_user_models.py
tests/test_unit/test_service/: test_admin_services.py  test_auth_services.py  test_jwt_services.py  test_password_services.py  test_user_services.py
(+16 files in other folders)
